--- a/site.conf
+++ b/site.conf
@@ -3,12 +3,16 @@ server {
     server_name php-docker.local;
     error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root /code;
+    root /server/http/web;
+
+    location / {
+        try_files $uri /index.php$is_args$args;
+    }
 
     location ~ \.php$ {
         #Here we are checking for the existence of the .php file before passing it to the fastCGI backend. If the file does not exist, we return a 404 Not Found page
-        #try_files $uri =404;
-        # fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php:7000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
