--- a/ci/tasks/build-draft.yml
+++ b/ci/tasks/build-draft.yml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    - repository: quay.io/hellofresh/docker-php-ci
+    - repository: hub.docker.com/r/geertw/docker-php-ci
     - tag: "7.1"
 
 run:
