--- a/ci/tasks/build-php.yml
+++ b/ci/tasks/build-php.yml
@@ -5,7 +5,7 @@ image_resource:
   type: docker-image
   source:
     - repository: hub.docker.com/r/geertw/docker-php-ci
-    - tag: "7.1"
+#    - tag: "7.1"
 
 run:
   path: ci/tasks/build-php.sh
