--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,14 @@
     "require": {
         "league/route": "~3.0",
         "zendframework/zend-diactoros": "~1.4",
-        "jms/serializer": "~1.7"
+        "jms/serializer": "~1.7",
+        "sendgrid/sendgrid": "^6.0",
+        "firebase/php-jwt": "^5.0",
+        "symfony/console": "^3.3",
+        "symfony/var-dumper": "^3.3"
+    },
+    "require-dev": {
+        "phpmd/phpmd" : "@stable"
     },
     "autoload": {
         "psr-4": { "MyApp\\": "src/" }
